[package]
name = "rust-tokio-shutdowns"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
tokio = { version = "1.52.3", features = ["full"] }

[[bench]]
name = "workers"
harness = false
